VFS-7774 Fixed fields wraping in lane form

--- a/app/styles/onedata-gui-common/components/modals/workflow-visualiser/lane-modal/lane-form.scss
+++ b/app/styles/onedata-gui-common/components/modals/workflow-visualiser/lane-modal/lane-form.scss
@@ -1,5 +1,7 @@
 .lane-form {
   .iteratorOptions-field {
+    flex-wrap: wrap;
+
     > .control-label {
       flex-basis: 100%;
       text-align: center;
